gen/grammar_wikiParser.py
# Generated from D:/Git/Парсер Викиразмертки\grammar_wiki.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class grammar_wikiParser ( Parser ):

    grammarFileName = "grammar_wiki.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'name='", "'>'", "'['", "']'", "<INVALID>", 
                     "'[['", "']]'", "'{{'", "'}}'", "'<ref'", "'</ref>'", 
                     "'|'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'=='", "'==='", "'===='", "'====='", 
                     "'======'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "TextComment", "StartLink", "EndLink", 
                      "StartTemplate", "EndTemplate", "StartRef", "EndRef", 
                      "OrDelimitter", "AssignementDelimitter", "ManageSymbols", 
                      "AnyText", "Whitespace", "H1", "H2", "H3", "H4", "H5", 
                      "H6" ]

    RULE_run_program = 0
    RULE_elements = 1
    RULE_element = 2
    RULE_link = 3
    RULE_link_args = 4
    RULE_link_arg = 5
    RULE_reference = 6
    RULE_reference_content = 7
    RULE_template = 8
    RULE_template_arg = 9
    RULE_template_arg_content = 10
    RULE_heading = 11
    RULE_heading1 = 12
    RULE_heading2 = 13
    RULE_heading3 = 14
    RULE_heading4 = 15
    RULE_heading5 = 16
    RULE_heading6 = 17

    ruleNames =  [ "run_program", "elements", "element", "link", "link_args", 
                   "link_arg", "reference", "reference_content", "template", 
                   "template_arg", "template_arg_content", "heading", "heading1", 
                   "heading2", "heading3", "heading4", "heading5", "heading6" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    TextComment=5
    StartLink=6
    EndLink=7
    StartTemplate=8
    EndTemplate=9
    StartRef=10
    EndRef=11
    OrDelimitter=12
    AssignementDelimitter=13
    ManageSymbols=14
    AnyText=15
    Whitespace=16
    H1=17
    H2=18
    H3=19
    H4=20
    H5=21
    H6=22

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class Run_programContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(grammar_wikiParser.EOF, 0)

        def elements(self):
            return self.getTypedRuleContext(grammar_wikiParser.ElementsContext,0)


        def getRuleIndex(self):
            return grammar_wikiParser.RULE_run_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRun_program" ):
                listener.enterRun_program(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRun_program" ):
                listener.exitRun_program(self)




    def run_program(self):

        localctx = grammar_wikiParser.Run_programContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_run_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << grammar_wikiParser.TextComment) | (1 << grammar_wikiParser.StartLink) | (1 << grammar_wikiParser.StartTemplate) | (1 << grammar_wikiParser.StartRef) | (1 << grammar_wikiParser.AnyText) | (1 << grammar_wikiParser.H1) | (1 << grammar_wikiParser.H2) | (1 << grammar_wikiParser.H3) | (1 << grammar_wikiParser.H4) | (1 << grammar_wikiParser.H5) | (1 << grammar_wikiParser.H6))) != 0):
                self.state = 36
                self.elements()


            self.state = 39
            self.match(grammar_wikiParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ElementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammar_wikiParser.ElementContext)
            else:
                return self.getTypedRuleContext(grammar_wikiParser.ElementContext,i)


        def getRuleIndex(self):
            return grammar_wikiParser.RULE_elements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElements" ):
                listener.enterElements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElements" ):
                listener.exitElements(self)




    def elements(self):

        localctx = grammar_wikiParser.ElementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_elements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 41
                self.element()
                self.state = 44 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << grammar_wikiParser.TextComment) | (1 << grammar_wikiParser.StartLink) | (1 << grammar_wikiParser.StartTemplate) | (1 << grammar_wikiParser.StartRef) | (1 << grammar_wikiParser.AnyText) | (1 << grammar_wikiParser.H1) | (1 << grammar_wikiParser.H2) | (1 << grammar_wikiParser.H3) | (1 << grammar_wikiParser.H4) | (1 << grammar_wikiParser.H5) | (1 << grammar_wikiParser.H6))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ElementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TextComment(self):
            return self.getToken(grammar_wikiParser.TextComment, 0)

        def link(self):
            return self.getTypedRuleContext(grammar_wikiParser.LinkContext,0)


        def heading(self):
            return self.getTypedRuleContext(grammar_wikiParser.HeadingContext,0)


        def reference(self):
            return self.getTypedRuleContext(grammar_wikiParser.ReferenceContext,0)


        def template(self):
            return self.getTypedRuleContext(grammar_wikiParser.TemplateContext,0)


        def AnyText(self):
            return self.getToken(grammar_wikiParser.AnyText, 0)

        def getRuleIndex(self):
            return grammar_wikiParser.RULE_element

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElement" ):
                listener.enterElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElement" ):
                listener.exitElement(self)




    def element(self):

        localctx = grammar_wikiParser.ElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_element)
        try:
            self.state = 52
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [grammar_wikiParser.TextComment]:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.match(grammar_wikiParser.TextComment)
                pass
            elif token in [grammar_wikiParser.StartLink]:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.link()
                pass
            elif token in [grammar_wikiParser.H1, grammar_wikiParser.H2, grammar_wikiParser.H3, grammar_wikiParser.H4, grammar_wikiParser.H5, grammar_wikiParser.H6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.heading()
                pass
            elif token in [grammar_wikiParser.StartRef]:
                self.enterOuterAlt(localctx, 4)
                self.state = 49
                self.reference()
                pass
            elif token in [grammar_wikiParser.StartTemplate]:
                self.enterOuterAlt(localctx, 5)
                self.state = 50
                self.template()
                pass
            elif token in [grammar_wikiParser.AnyText]:
                self.enterOuterAlt(localctx, 6)
                self.state = 51
                self.match(grammar_wikiParser.AnyText)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LinkContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def StartLink(self):
            return self.getToken(grammar_wikiParser.StartLink, 0)

        def EndLink(self):
            return self.getToken(grammar_wikiParser.EndLink, 0)

        def link_args(self):
            return self.getTypedRuleContext(grammar_wikiParser.Link_argsContext,0)


        def getRuleIndex(self):
            return grammar_wikiParser.RULE_link

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLink" ):
                listener.enterLink(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLink" ):
                listener.exitLink(self)




    def link(self):

        localctx = grammar_wikiParser.LinkContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_link)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(grammar_wikiParser.StartLink)
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==grammar_wikiParser.StartLink or _la==grammar_wikiParser.AnyText:
                self.state = 55
                self.link_args()


            self.state = 58
            self.match(grammar_wikiParser.EndLink)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Link_argsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def link_arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammar_wikiParser.Link_argContext)
            else:
                return self.getTypedRuleContext(grammar_wikiParser.Link_argContext,i)


        def OrDelimitter(self, i:int=None):
            if i is None:
                return self.getTokens(grammar_wikiParser.OrDelimitter)
            else:
                return self.getToken(grammar_wikiParser.OrDelimitter, i)

        def getRuleIndex(self):
            return grammar_wikiParser.RULE_link_args

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLink_args" ):
                listener.enterLink_args(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLink_args" ):
                listener.exitLink_args(self)




    def link_args(self):

        localctx = grammar_wikiParser.Link_argsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_link_args)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.link_arg()
            self.state = 65
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==grammar_wikiParser.OrDelimitter:
                self.state = 61
                self.match(grammar_wikiParser.OrDelimitter)
                self.state = 62
                self.link_arg()
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Link_argContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AnyText(self):
            return self.getToken(grammar_wikiParser.AnyText, 0)

        def link(self):
            return self.getTypedRuleContext(grammar_wikiParser.LinkContext,0)


        def getRuleIndex(self):
            return grammar_wikiParser.RULE_link_arg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLink_arg" ):
                listener.enterLink_arg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLink_arg" ):
                listener.exitLink_arg(self)




    def link_arg(self):

        localctx = grammar_wikiParser.Link_argContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_link_arg)
        try:
            self.state = 70
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [grammar_wikiParser.AnyText]:
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.match(grammar_wikiParser.AnyText)
                pass
            elif token in [grammar_wikiParser.StartLink]:
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.link()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ReferenceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def StartRef(self):
            return self.getToken(grammar_wikiParser.StartRef, 0)

        def reference_content(self):
            return self.getTypedRuleContext(grammar_wikiParser.Reference_contentContext,0)


        def EndRef(self):
            return self.getToken(grammar_wikiParser.EndRef, 0)

        def AnyText(self):
            return self.getToken(grammar_wikiParser.AnyText, 0)

        def getRuleIndex(self):
            return grammar_wikiParser.RULE_reference

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReference" ):
                listener.enterReference(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReference" ):
                listener.exitReference(self)




    def reference(self):

        localctx = grammar_wikiParser.ReferenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_reference)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(grammar_wikiParser.StartRef)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==grammar_wikiParser.T__0:
                self.state = 73
                self.match(grammar_wikiParser.T__0)
                self.state = 74
                self.match(grammar_wikiParser.AnyText)


            self.state = 77
            self.match(grammar_wikiParser.T__1)
            self.state = 78
            self.reference_content()
            self.state = 79
            self.match(grammar_wikiParser.EndRef)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Reference_contentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TextComment(self):
            return self.getToken(grammar_wikiParser.TextComment, 0)

        def AnyText(self):
            return self.getToken(grammar_wikiParser.AnyText, 0)

        def link(self):
            return self.getTypedRuleContext(grammar_wikiParser.LinkContext,0)


        def template(self):
            return self.getTypedRuleContext(grammar_wikiParser.TemplateContext,0)


        def getRuleIndex(self):
            return grammar_wikiParser.RULE_reference_content

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReference_content" ):
                listener.enterReference_content(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReference_content" ):
                listener.exitReference_content(self)




    def reference_content(self):

        localctx = grammar_wikiParser.Reference_contentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_reference_content)
        try:
            self.state = 88
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [grammar_wikiParser.TextComment]:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.match(grammar_wikiParser.TextComment)
                pass
            elif token in [grammar_wikiParser.AnyText]:
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.match(grammar_wikiParser.AnyText)
                pass
            elif token in [grammar_wikiParser.StartLink]:
                self.enterOuterAlt(localctx, 3)
                self.state = 83
                self.link()
                pass
            elif token in [grammar_wikiParser.StartTemplate]:
                self.enterOuterAlt(localctx, 4)
                self.state = 84
                self.template()
                pass
            elif token in [grammar_wikiParser.T__2]:
                self.enterOuterAlt(localctx, 5)
                self.state = 85
                self.match(grammar_wikiParser.T__2)
                self.state = 86
                self.match(grammar_wikiParser.AnyText)
                self.state = 87
                self.match(grammar_wikiParser.T__3)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TemplateContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def StartTemplate(self):
            return self.getToken(grammar_wikiParser.StartTemplate, 0)

        def AnyText(self):
            return self.getToken(grammar_wikiParser.AnyText, 0)

        def EndTemplate(self):
            return self.getToken(grammar_wikiParser.EndTemplate, 0)

        def OrDelimitter(self, i:int=None):
            if i is None:
                return self.getTokens(grammar_wikiParser.OrDelimitter)
            else:
                return self.getToken(grammar_wikiParser.OrDelimitter, i)

        def template_arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammar_wikiParser.Template_argContext)
            else:
                return self.getTypedRuleContext(grammar_wikiParser.Template_argContext,i)


        def getRuleIndex(self):
            return grammar_wikiParser.RULE_template

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTemplate" ):
                listener.enterTemplate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTemplate" ):
                listener.exitTemplate(self)




    def template(self):

        localctx = grammar_wikiParser.TemplateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_template)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(grammar_wikiParser.StartTemplate)
            self.state = 91
            self.match(grammar_wikiParser.AnyText)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==grammar_wikiParser.OrDelimitter:
                self.state = 92
                self.match(grammar_wikiParser.OrDelimitter)
                self.state = 93
                self.template_arg()
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 99
            self.match(grammar_wikiParser.EndTemplate)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Template_argContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AnyText(self):
            return self.getToken(grammar_wikiParser.AnyText, 0)

        def AssignementDelimitter(self):
            return self.getToken(grammar_wikiParser.AssignementDelimitter, 0)

        def template_arg_content(self):
            return self.getTypedRuleContext(grammar_wikiParser.Template_arg_contentContext,0)


        def getRuleIndex(self):
            return grammar_wikiParser.RULE_template_arg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTemplate_arg" ):
                listener.enterTemplate_arg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTemplate_arg" ):
                listener.exitTemplate_arg(self)




    def template_arg(self):

        localctx = grammar_wikiParser.Template_argContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_template_arg)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(grammar_wikiParser.AnyText)
            self.state = 102
            self.match(grammar_wikiParser.AssignementDelimitter)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==grammar_wikiParser.StartTemplate or _la==grammar_wikiParser.AnyText:
                self.state = 103
                self.template_arg_content()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Template_arg_contentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AnyText(self, i:int=None):
            if i is None:
                return self.getTokens(grammar_wikiParser.AnyText)
            else:
                return self.getToken(grammar_wikiParser.AnyText, i)

        def template(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(grammar_wikiParser.TemplateContext)
            else:
                return self.getTypedRuleContext(grammar_wikiParser.TemplateContext,i)


        def getRuleIndex(self):
            return grammar_wikiParser.RULE_template_arg_content

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTemplate_arg_content" ):
                listener.enterTemplate_arg_content(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTemplate_arg_content" ):
                listener.exitTemplate_arg_content(self)




    def template_arg_content(self):

        localctx = grammar_wikiParser.Template_arg_contentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_template_arg_content)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 107
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==grammar_wikiParser.AnyText:
                        self.state = 106
                        self.match(grammar_wikiParser.AnyText)


                    self.state = 109
                    self.template() 
                self.state = 114
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

            self.state = 115
            self.match(grammar_wikiParser.AnyText)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class HeadingContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def heading1(self):
            return self.getTypedRuleContext(grammar_wikiParser.Heading1Context,0)


        def heading2(self):
            return self.getTypedRuleContext(grammar_wikiParser.Heading2Context,0)


        def heading3(self):
            return self.getTypedRuleContext(grammar_wikiParser.Heading3Context,0)


        def heading4(self):
            return self.getTypedRuleContext(grammar_wikiParser.Heading4Context,0)


        def heading5(self):
            return self.getTypedRuleContext(grammar_wikiParser.Heading5Context,0)


        def heading6(self):
            return self.getTypedRuleContext(grammar_wikiParser.Heading6Context,0)


        def getRuleIndex(self):
            return grammar_wikiParser.RULE_heading

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeading" ):
                listener.enterHeading(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeading" ):
                listener.exitHeading(self)




    def heading(self):

        localctx = grammar_wikiParser.HeadingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_heading)
        try:
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [grammar_wikiParser.H1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.heading1()
                pass
            elif token in [grammar_wikiParser.H2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.heading2()
                pass
            elif token in [grammar_wikiParser.H3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 119
                self.heading3()
                pass
            elif token in [grammar_wikiParser.H4]:
                self.enterOuterAlt(localctx, 4)
                self.state = 120
                self.heading4()
                pass
            elif token in [grammar_wikiParser.H5]:
                self.enterOuterAlt(localctx, 5)
                self.state = 121
                self.heading5()
                pass
            elif token in [grammar_wikiParser.H6]:
                self.enterOuterAlt(localctx, 6)
                self.state = 122
                self.heading6()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Heading1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def H1(self, i:int=None):
            if i is None:
                return self.getTokens(grammar_wikiParser.H1)
            else:
                return self.getToken(grammar_wikiParser.H1, i)

        def AnyText(self):
            return self.getToken(grammar_wikiParser.AnyText, 0)

        def getRuleIndex(self):
            return grammar_wikiParser.RULE_heading1

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeading1" ):
                listener.enterHeading1(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeading1" ):
                listener.exitHeading1(self)




    def heading1(self):

        localctx = grammar_wikiParser.Heading1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_heading1)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(grammar_wikiParser.H1)
            self.state = 126
            self.match(grammar_wikiParser.AnyText)
            self.state = 127
            self.match(grammar_wikiParser.H1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Heading2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def H2(self, i:int=None):
            if i is None:
                return self.getTokens(grammar_wikiParser.H2)
            else:
                return self.getToken(grammar_wikiParser.H2, i)

        def AnyText(self):
            return self.getToken(grammar_wikiParser.AnyText, 0)

        def getRuleIndex(self):
            return grammar_wikiParser.RULE_heading2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeading2" ):
                listener.enterHeading2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeading2" ):
                listener.exitHeading2(self)




    def heading2(self):

        localctx = grammar_wikiParser.Heading2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_heading2)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(grammar_wikiParser.H2)
            self.state = 130
            self.match(grammar_wikiParser.AnyText)
            self.state = 131
            self.match(grammar_wikiParser.H2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Heading3Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def H3(self, i:int=None):
            if i is None:
                return self.getTokens(grammar_wikiParser.H3)
            else:
                return self.getToken(grammar_wikiParser.H3, i)

        def AnyText(self):
            return self.getToken(grammar_wikiParser.AnyText, 0)

        def getRuleIndex(self):
            return grammar_wikiParser.RULE_heading3

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeading3" ):
                listener.enterHeading3(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeading3" ):
                listener.exitHeading3(self)




    def heading3(self):

        localctx = grammar_wikiParser.Heading3Context(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_heading3)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(grammar_wikiParser.H3)
            self.state = 134
            self.match(grammar_wikiParser.AnyText)
            self.state = 135
            self.match(grammar_wikiParser.H3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Heading4Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def H4(self, i:int=None):
            if i is None:
                return self.getTokens(grammar_wikiParser.H4)
            else:
                return self.getToken(grammar_wikiParser.H4, i)

        def AnyText(self):
            return self.getToken(grammar_wikiParser.AnyText, 0)

        def getRuleIndex(self):
            return grammar_wikiParser.RULE_heading4

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHeading4" ):
                listener.enterHeading4(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHeading4" ):
                listener.exitHeading4(self)




    def heading4(self):

        localctx = grammar_wikiParser.Heading4Context(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_heading4)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(grammar_wikiParser.H4)
            self.state = 138
            self.match(grammar_wikiParser.AnyText)
            self.state = 139
            self.match(grammar_wikiParser.H4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Heading5Context(ParserRuleContext):
